<resources>
    <string name="app_name">Portafolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="log_out_item">Cerrar Sesión</string>
    <string name="usuario">Fernanda Ochoa</string>
    <string name="correo">fer.ochoa@def.mx</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="amigos">Amigos</string>
    <string name="conf">Configuracion</string>
    <string name="ayuda">Ayuda</string>
    <string name="configuracion_item">Configuración</string>

</resources>
